--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+.cursive{
+    font-family: "Amatic SC", cursive;
+    font-weight: 700;
+}
+
+.prose img {
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+}
+
+.home-name{
+    font-size: 110px;
+}
